# Python-first

./: HEALTH_LOG_PROJECT.md  LEARNING_LOG.md  NEXT_STEPS.md  README.md  TROUBLESHOOTING.md  data_type_demo.py  gazo.py  health_cat_log.csv  health_cat_log.txt  kaitemiru.py  kakikaji.py  omiseko.py  pyproject.toml  requirements.txt  sousa.py  tai_coude.py  taityou_claude.py  taityoukakinaosi.py
analysis/: README.md
fileadd/src/: io_csv.py
fileadd/tests/: test_io_csv.py
fukusyu/: README.md  conte.py  dainyu.py  detagata.py  detagatakaki.py  escape_practice.py  escape_quiz.py  fukugodainyu.py  hens.py  jyokenkuri.py  kata.py  mosi.py  mosied.py  mugen_demo.py  mugen_loop_examples.py  rensyu.py  siki.py  siteikuri.py  string_index_demo.py  string_multiply_demo.py  suisu.py  taityohozo.py  type_samples.py  ume.py  while_jitsumu_examples.py  while_string_examples.py  yotsuba_hattatsu.py
journal/2025/10/: 2025-10-30T220339+0900.md
output/: taityoukakinaosi.py  taityousoukan.py
src/: io_csv.py
src/health_journal/: __init__.py  __main__.py  cli.py  journal.py
tests/: conftest.py  test_cli.py  test_io_csv.py  test_journal.py  test_smoke.py
tests/fixtures/journal/2025/10/: 2025-10-25T100000+0900.md  2025-10-26T120000+0900.md  2025-10-27T140000+0900.md  2025-10-28T160000+0900-missing.md  2025-10-29T180000+0900-broken.md  (+1 more)
スッキリ解る/: indentodesu.py  jyouken.py
スッキリ解る/条件/: bunki.py  bunkikaizen.py  bunkikaizensiyou.md  busyobango.py  busyobunki.py  cskaizenbusyo.py  dept_chek_log.csv  ifwoyarimasu.py  sirabe.py
スッキリ解る/条件/設計メモ/: busyobunkisekkei.md
